finished unit and integration tests for menuItemService