@@ -41,7 +41,7 @@ public class DiscountServiceUnitTests {
 	@Test
 	public void findById_ValidId_ExistingDiscount() throws Exception {
 		Discount discount = discountService.findById(1);
-		assertEquals(discount.getValue(), new Integer(10));
+		assertEquals(discount.getValue(), Integer.valueOf(10));
 	}
 
 	@Test
@@ -61,7 +61,7 @@ public class DiscountServiceUnitTests {
 
 		Discount discount = discountService.update(discountForUpdate, 1);
 
-		assertEquals(discount.getValue(), new Integer(15));
+		assertEquals(discount.getValue(), Integer.valueOf(15));
 		assertEquals(discount.getStartDate(), LocalDate.parse("2021-11-21"));
 		assertEquals(discount.getEndDate(), LocalDate.parse("2021-11-22"));
 		assertEquals(discount.getCurrent(), true);
